# coldmod

./: .env.template  .gitignore  About.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  pyproject.toml
coldmod/: heatmap.py  read_trace.py  write_trace.py
coldmod-d/: .gitignore  Cargo.toml  README.md
coldmod-d/src/: dispatch.rs  grpc.rs  lib.rs  main.rs  scratch.rs  storage.rs  store.rs  tracing.rs  web.rs
coldmod-d/tests/: clients.rs  tests.rs  websocket_apps.rs
coldmod-daemon/: Cargo.toml  build.rs  dump.rdb  udp.py
coldmod-daemon/examples/client/: main.rs
coldmod-daemon/proto/: trace.proto
coldmod-daemon/src/: lib.rs  main.rs  tracing.rs  triage.rs  web.rs
coldmod-msg/: README.md  trace.fbs
coldmod-msg/proto/: heat.proto  ops.proto  source.proto  trace.proto  tracing.proto
coldmod-msg/py/: README.md  gen.sh  pyproject.toml
coldmod-msg/py/coldmod_msg/proto/: heat_pb2.py  heat_pb2.pyi  heat_pb2_grpc.py  source_pb2.py  source_pb2.pyi  source_pb2_grpc.py  trace_pb2.py  trace_pb2.pyi  trace_pb2_grpc.py  tracing_pb2.py  tracing_pb2.pyi  tracing_pb2_grpc.py
coldmod-msg/py/coldmod_msg_py/: Event.py  Trace.py  __init__.py
coldmod-msg/rs/: Cargo.toml  build.rs
coldmod-msg/rs/examples/client/: main.rs
coldmod-msg/rs/src/: lib.rs  trace_generated.rs  web.rs
coldmod-py/: README.md  pyproject.toml  scratch.py
coldmod-py/coldmod/: __main__.py  heatmap.py  read_sources.py  repr.py  tracing.py
coldmod-py/coldmod/samples/app_1/: app.py
coldmod-py/coldmod/tests/: sample.trace_target_1  test_emitter.py  test_heatmap.py
coldmod-py/coldmod/tests/introspection/: udp_listener.py
coldmod-py/coldmod_py/: __init__.py  __main__.py  coldmod_py  config.py  heatmap.py  read_sources.py  read_trace.py  tracing.py  tracing2.py  write_trace.py
coldmod-py/coldmod_py/cache/: __init__.py
coldmod-py/coldmod_py/cli/: __main__.py
coldmod-py/coldmod_py/cm/: __main__.py
coldmod-py/coldmod_py/code/: __init__.py  digest.py  function_finder.py  parse.py  parsed_trace_src.py  visitor.py  visitor_test.py
coldmod-py/coldmod_py/code2/: __init__.py  function_finder.py  parsed_trace_src.py
coldmod-py/coldmod_py/coldmod_d/: __init__.py
coldmod-py/coldmod_py/demo/: __main__.py
coldmod-py/coldmod_py/files/: __init__.py  find_src_files_in.py  find_src_files_in_test.py  find_srcs_in_test.py  read_all.py  read_all_test.py
coldmod-py/coldmod_py/fs/: __init__.py  test_fs.py
coldmod-py/coldmod_py/mod/: __init__.py  refs.py  remove.py
coldmod-py/coldmod_py/root_marker/: __init__.py
coldmod-py/coldmod_py/samples/app_1/: __main__.py  app.py
coldmod-py/coldmod_py/samples/grpc/: __main__.py
coldmod-py/coldmod_py/samples/trace_target_1/: Coldmod.toml  __main__.py
coldmod-py/coldmod_py/source/: __init__.py  connect.py  files.py  scan.py  visitors.py
coldmod-py/coldmod_py/tests/: test_emitter.py  test_heatmap.py  test_read_sources.py
coldmod-py/coldmod_py/tracing/: __init__.py  connect.py  functions.py  queue.py  sender.py  settrace.py
coldmod-py/coldmod_py/tracing/src/: __init__.py  parse.py  tracing_src.py  visitor.py  visitor_test.py
coldmod-py/coldmod_py/web/: __init__.py
coldmod-web/: Cargo.toml  README.md  Trunk.toml  index.html
coldmod-web/src/: app_btn.rs  app_lug.scss  coldmod_d.rs  controls_ui.rs  dispatch.rs  events.rs  filter_state.rs  heatmap_filter.rs  heatmap_ui.rs  index.scss  main.rs  stream.rs  tracing_status_ui.rs
coldmod-web/src/source/: mod.rs
coldmod-web/src/websocket/: mod.rs
coldmod/samples/trace_target_1/: __main__.py  helper.py
coldmod/tests/: sample.trace_target_1  test_heatmap.py  test_read_sources.py
