[tool.poetry]
name = "coldmod"
version = "0.1.0"
description = "find cold code"
authors = ["Sam Taylor <sjltaylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"
libcst = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
