[tool.poetry]
name = "coldmod"
version = "0.1.0"
description = ""
authors = ["Sam Taylor <sjltaylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coldmod-py = {path = "coldmod-py", develop = true}
coldmod-msg = {path = "coldmod-msg/py", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
