[package]
name = "coldmod-d"
version = "0.1.0"
edition = "2021"
default-run = "coldmod-d"

[dependencies]
serde = { version = "1.0.178", features = ["derive"] }
redis = { version = "0.23.1", features = ["aio", "ahash", "tokio-comp"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
headers = "0.3.8"
num_cpus = "1.15.0"
tonic = "0.9.2"
prost = "0.11.9"
coldmod-msg = { version = "0.1.0", path = "../coldmod-msg/rs", features = ["grpc-server", "grpc-client"] }
axum = { version = "0.6.19", features = ["json", "http2", "tracing", "ws", "headers", "macros", "multipart"] }
axum-extra = "0.7.4"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
tokio-tungstenite = "0.20.0"
chrono = "0.4.24"
flexbuffers = "2.0.0"
async-channel = "1.8.0"
anyhow = "1.0.71"
async-stream = "0.3.5"
async-trait = "0.1.68"
argh = "0.1.10"

[dev-dependencies]
futures-util = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
