[package]
name = "coldmod-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.159", features = ["derive"]}
redis = { version = "0.23.0", features = ["tls-rustls"] }
actix-web = { version = "4.3.1" }
tokio = { version = "1.28.0", features = ["full"] }
async-channel = "1.8.0"
futures = "0.3.28"
num_cpus = "1.15.0"
