[tool.poetry]
name = "coldmod-py"
version = "0.1.0"
description = "find cold code"
authors = ["Sam Taylor <sjltaylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "^0.4.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[tool.ipdb]
context=5
