[tool.poetry]
name = "coldmod-py"
version = "0.1.0"
description = "find cold code"
authors = ["Sam Taylor <sjltaylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "^1.0.1"
grpcio-tools = "^1.54.0"
grpcio = "^1.54.0"
protobuf = "^4.22.4"
coldmod-msg = "^0.1.0"
fire = "^0.5.0"
jedi = "^0.19.0"
tomli-w = "^1.0.0"
tomli = "^2.0.1"
backoff = "^2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
coldmod-msg = {path = "../coldmod-msg/py", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[tool.ipdb]
context = 5
