[package]
name = "coldmod-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
gloo-timers = { version = "0.2.6", features = ["futures"] }
js-sys = "0.3.61"
leptos = "0.2.5"
wasm-bindgen = "0.2.86"
web-sys = "0.3.61"
