[package]
name = "coldmod-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
coldmod-msg = { version = "0.1.0", path = "../coldmod-msg/rs" }
crossfire = "1.0.0"
flexbuffers = "2.0.0"
gloo-timers = { version = "0.2.6", features = ["futures"] }
js-sys = "0.3.61"
leptos = "0.2.5"
serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.61", features = ["Event", "ErrorEvent", "CloseEvent"] }
