[package]
name = "coldmod-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
coldmod-msg = { version = "0.1.0", path = "../coldmod-msg/rs" }
console_error_panic_hook = "0.1.7"
flexbuffers = "2.0.0"
js-sys = "0.3.61"
leptos = { version = "0.5.2", features = ["csr"] }
serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.61", features = ["Event", "ErrorEvent", "CloseEvent", "WebSocket", "BinaryType", "History", "Crypto"] }
