[tool.poetry]
name = "coldmod-msg"
version = "0.1.0"
description = ""
authors = ["Sam Taylor <sjltaylor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
