[package]
name = "coldmod-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.11.9"}
tonic = { version = "0.9.2", optional = true }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
futures-util = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.9.2"}

[[example]]
name = "client"
required-features = ["grpc-client"]

[features]
grpc-server = ["dep:tonic"]
grpc-client = ["dep:tonic"]
