[package]
name = "coldmod-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.11.9"}
tonic = { version = "0.9.2", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
flexbuffers = "2.0.0"
anyhow = "1.0.71"

[build-dependencies]
tonic-build = { version = "0.9.2"}

[features]
grpc-server = ["dep:tonic"]
grpc-client = ["dep:tonic"]
